# qpx-gamma

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  PLX_DRIVER_INSTALL.txt  README.md  TODO  common.pri  config.pri  config.sh  cpx  cpx.cpp  cpx.h  cpx.pro  first_build.sh  get-boost.sh  install.sh  prep.sh  qpx  qpx.desktop  qpx.pro  qpx_gamma.pro  update.sh
cmd/: CMakeLists.txt  cmd.pro  cpx.cpp  cpx.h
consumers/: CMakeLists.txt  consumers.pri  spectrum.cpp  spectrum1D.cpp  spectrum1D.h  spectrum2D.cpp  spectrum2D.h  spectrum_time.h  time_domain.cpp
engine/: CMakeLists.txt  calibration.cpp  calibration.h  consumer_factory.cpp  consumer_factory.h  consumer_metadata.cpp  custom_logger.cpp  custom_logger.h  custom_timer.h  daq_device.cpp  daq_device.h  daq_sink.cpp  daq_sink.h  daq_sink_factory.cpp  daq_sink_factory.h  daq_source.cpp  daq_source.h  daq_source_factory.cpp  daq_source_factory.h  daq_types.cpp  daq_types.h  detector.cpp  detector.h  digitized_value.cpp  digitized_value.h  domain.cpp  domain.h  engine.cpp  engine.h  engine.pri  event.cpp  event.h  experiment.cpp  experiment.h  gamma_fitter.cpp  gamma_fitter.h  gamma_peak.cpp  gamma_peak.h  generic_setting.cpp  generic_setting.h  (+29 more)
engine/fitting/: finder.cpp  finder.h  fitter.cpp  fitter.h  gamma_fitter.cpp  gamma_fitter.h  gamma_peak.cpp  gamma_peak.h  gates.cpp  gates.h  isotope.h  optimizer.cpp  optimizer.h  peak.cpp  peak.h  qpx_fitting.pri  roi.cpp  roi.h  sum4.cpp  sum4.h
engine/h5/: JsonH5.h  JsonH5.tpp
engine/math/: UncertainDouble.cpp  UncertainDouble.h  coef_function.cpp  coef_function.h  effit.cpp  effit.h  fit_param.cpp  fit_param.h  fit_settings.cpp  fit_settings.h  fityk_util.cpp  fityk_util.h  gaussian.cpp  gaussian.h  hypermet.cpp  hypermet.h  log_inverse.cpp  log_inverse.h  polylog.cpp  polylog.h  polynomial.cpp  polynomial.h  sqrt_poly.cpp  sqrt_poly.h  units.h  val_uncert.cpp  val_uncert.h
engine/plugins/: pixie_plugin.cpp  pixie_plugin.h
engine/spectrum/: manip2d.cpp  manip2d.h  spectra_set.cpp  spectra_set.h  spectrum.cpp  spectrum.h  spectrum1D.cpp  spectrum1D.h  spectrum1D_LFC.cpp  spectrum1D_LFC.h  spectrum2D.cpp  spectrum2D.h  spectrum_factory.cpp  spectrum_factory.h  spectrum_raw.cpp  spectrum_raw.h  spectrum_template.cpp  spectrum_template.h  spectrum_time.cpp  spectrum_time.h
gui/: CMakeLists.txt  about.ui  dialog_detector.ui  dialog_save_spectra.cpp  dialog_save_spectra.h  dialog_spectra_templates.cpp  dialog_spectra_templates.h  dialog_spectrum.cpp  dialog_spectrum.h  form_analysis_1d.cpp  form_analysis_1d.h  form_analysis_2d.cpp  form_analysis_2d.h  form_bootup.cpp  form_bootup.h  form_calibration.cpp  form_calibration.h  form_coinc_peaks.cpp  form_coinc_peaks.h  form_daq_settings.cpp  form_energy_calibration.cpp  form_energy_calibration.h  form_fwhm_calibration.cpp  form_fwhm_calibration.h  form_gain_match.cpp  form_gain_match.cpp.autosave  form_gain_match.h  form_gain_match.ui  form_list_daq.cpp  form_list_daq.h  form_mca_daq.cpp  form_mca_daq.h  form_optimization.cpp  form_optimization.h  form_optimization.ui  form_oscilloscope.cpp  form_oscilloscope.h  form_oscilloscope.ui  form_peak_fitter.cpp  form_peak_fitter.h  (+52 more)
gui/analysis/: form_analysis_1d.cpp  form_analysis_1d.h  form_analysis_1d.ui  form_analysis_2d.cpp  form_analysis_2d.h  form_analysis_2d.ui  form_coinc_peaks.cpp  form_coinc_peaks.h  form_coinc_peaks.ui  form_efficiency_calibration.cpp  form_efficiency_calibration.h  form_efficiency_calibration.ui  form_energy_calibration.cpp  form_energy_calibration.h  form_energy_calibration.ui  form_energy_calibration.ui.autosave  form_fit_results.cpp  form_fit_results.h  form_fit_results.ui  form_fitter.cpp  form_fitter.h  form_fitter.ui  form_fitter_settings.cpp  form_fitter_settings.h  form_fitter_settings.ui  form_fwhm_calibration.cpp  form_fwhm_calibration.h  form_fwhm_calibration.ui  form_gain_calibration.cpp  form_gain_calibration.h  form_gain_calibration.ui  form_gates_plot2d.cpp  form_gates_plot2d.h  form_gates_plot2d.ui  form_integration2d.cpp  form_integration2d.h  form_integration2d.ui  form_manip1d.cpp  form_manip1d.h  form_manip1d.ui  (+32 more)
gui/daq/: coord.cpp  dialog_domain.cpp  dialog_domain.h  dialog_save_spectra.cpp  dialog_save_spectra.h  dialog_save_spectra.ui  dialog_spectra_templates.cpp  dialog_spectra_templates.h  dialog_spectra_templates.ui  dialog_spectrum.cpp  dialog_spectrum.h  dialog_spectrum.ui  dialog_spectrum.ui.autosave  dialog_spectrum_template.ui  experiment_filter.h  form_daq_settings.cpp  form_daq_settings.h  form_daq_settings.ui  form_experiment.cpp  form_experiment.h  form_experiment.ui  form_experiment_1d.cpp  form_experiment_1d.h  form_experiment_1d.ui  form_experiment_2d.cpp  form_experiment_2d.cpp.autosave  form_experiment_2d.h  form_experiment_2d.ui  form_experiment_setup.cpp  form_experiment_setup.h  form_experiment_setup.ui  form_gain_match.cpp  form_gain_match.h  form_gain_match.ui  form_list_daq.cpp  form_list_daq.h  form_list_daq.ui  form_mca_daq.cpp  form_mca_daq.h  form_mca_daq.ui  (+16 more)
gui/fitter/: form_fitter.cpp  form_fitter.h  form_fitter.ui  form_fitter_settings.cpp  form_fitter_settings.h  form_peak_info.cpp  qp_fitter.cpp  qp_fitter.h  qp_range_selector.cpp  qp_range_selector.h  rollback_dialog.cpp  rollback_dialog.h  thread_fitter.cpp  thread_fitter.h  widget_fitter_autoselect.cpp  widget_fitter_autoselect.h  widget_fitter_autoselect.ui
gui/plots/: appearance.cpp  appearance.h  coord.cpp  coord.h  draggable_tracer.cpp  draggable_tracer.h  form_plot2d.cpp  form_plot2d.h  form_plot2d.ui  histogram.h  qcp_overlay_button.cpp  qcp_overlay_button.h  qp_1d.cpp  qp_1d.h  qp_2d.cpp  qp_2d.h  qp_appearance.cpp  qp_appearance.h  qp_bounds.cpp  qp_bounds.h  qp_button.cpp  qp_button.h  qp_draggable.cpp  qp_draggable.h  qp_entry2d.h  qp_generic.cpp  qp_generic.h  qp_multi1d.cpp  qp_multi1d.h  qsquarecustomplot.cpp  qsquarecustomplot.h  widget_plot1d.cpp  widget_plot1d.h  widget_plot1d.ui  widget_plot2d.cpp  widget_plot2d.h  widget_plot2d.ui  widget_plot_calib.cpp  (+9 more)
producers/: CMakeLists.txt  producers.pri
src/: CMakeLists.txt
(+760 files in other folders)
